# MYM_Qt

./: .gitignore  PROGRESS.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 81c53c9ecdc7_01_initial_schema.py  b7a9f0d2c481_02_transaction_type_date_index.py
docs/: AI_WORKING_AGREEMENT.md  DATA_MIGRATION.md  LEGACY_INPUT_REQUIRED.md  PROJECT_CONTRACT.md  REBUILD_SPEC.md  core_data_model.md  feature_parity_matrix.md  ledger_invariants.md  legacy_business_rules.md  legacy_module_map.md  new_architecture_decisions.md  packaging_guide.md  risk_register.md  security_and_reliability.md  test_strategy.md
docs/ADR/: 0001-architecture.md
plugins/receivable_csv_import/: plugin.json  plugin.py
scripts/: perf_10000_transactions.py  verify_ledger.py
src/mym/: __init__.py  __main__.py  app.py
src/mym/bootstrap/: __init__.py  app_context.py
src/mym/infrastructure/: app_config.py  i18n.py  resource_check.py
src/mym/resources/: __init__.py
src/mym/ui/: main_window.py  main_window.py.bak  (+1 more)
src/mym2/: app.py  bootstrap.py
tests/: conftest.py  test_account_service.py  test_app_startup.py  test_category_service.py  test_dashboard_echarts.py  test_data_protection.py  test_database.py  test_ledger_service.py  test_legacy_audit.py  test_migration_dryrun.py  test_migration_executor.py  test_money.py  test_p13_dashboard.py  test_p14_chart.py  test_p15_report_query.py  test_p16_balance_sheet.py  test_p17_export.py  test_p18_receivable.py  test_p19_budget.py  test_p20_settings.py  test_p21_plugin.py  test_p22_investment.py  test_p23_p28_investment_full.py  test_p29_p30_ai.py  test_p2_infrastructure.py  test_p31_ai_analysis.py  test_p32_attachment.py  test_p33_import.py  test_p34_p36_migration.py  test_p3_database.py  test_p5_ledger_service.py  test_p6_regression.py  test_p7_lifecycle.py  test_project_contract.py  test_receivable_service.py  test_report_center.py  test_smoke.py  test_step15_quality_performance.py  test_transactions_page.py  test_ui_pages.py
tests/fixtures/: ledger_scenarios.py
(+159 files in other folders)
