[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mym2"
version = "0.1.0"
description = "MYM2 — 个人记账软件（PySide6 + SQLAlchemy + SQLite）"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "PySide6>=6.6,<7.0",
    "SQLAlchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "keyring>=25.0",
    "pydantic>=2.5,<3.0",
    "openpyxl>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.5",
]

[project.scripts]
mym2 = "mym2.app:main"
[tool.setuptools]
package-dir = { "" = "src" }
packages = ["mym2", "mym2.core", "mym2.ui", "mym2.ui.pages"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
