[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mym"
version = "0.1.0"
description = "Manage Your Money - Local Desktop Accounting Software"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "MYM Team"}]
readme = "README.md"

dependencies = [
    "PySide6>=6.6.0",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "openpyxl>=3.1.0",
    "pandas>=2.1.0",
    "pyecharts>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
mym = "mym.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
qt_api = "pyside6"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
